--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         family, and co-workers.</p>
 
                     <form action="post" class="main-form">
-                        <label for="email">
-                            <input class="main-input" type="email" id="email" placeholder="Enter your email..">
+                        <label for="email-addres">
+                            <input class="main-input" type="email" id="email-addres" placeholder="Enter your email..">
                         </label>
                         <a href="/" class="btn">Get Started</a>
                     </form>
@@ -80,8 +80,9 @@
                 </div>
             </div>
         </section>
-    </main>
+    
 <!-- End of main content -->
+
     <section>
         <div class="cta">
             <div class="flex-lower container">
@@ -91,16 +92,16 @@
                         If you have any questions, our support team would be happy to help you.</p>
                     </div>  
                 <form action="post" class="second-form">
-                    <label for="email">
-                        <input id="email" class="secondary-input" type="email" placeholder="Enter your email.." required>
+                    <label for="email-addres">
+                        <input id="email-addres" class="secondary-input" type="email" placeholder="Enter your email.." required>
                     </label>
                     <a href="/" class="btn">Get Started For Free</a>
                 </form>
             </div>
         </div>
-        
     </section>
 
+</main>
     <footer>
         <div class="white-logo container">
             <a href="/">
@@ -127,9 +128,9 @@
                 </ul>
 
             <div class="icons">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="/" aria-label="facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="/" aria-label="twitter"><i class="fa-brands fa-twitter"></i></a>
+                <a href="/" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
     </footer>
