--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         family, and co-workers.</p>
 
                     <form action="post" class="main-form">
-                        <label for="email-addres">
-                            <input class="main-input" type="email" id="email-addres" placeholder="Enter your email..">
+                        <label for="user-email">
+                            <input class="main-input" type="email" id="user-email" placeholder="Enter your email..">
                         </label>
                         <a href="/" class="btn">Get Started</a>
                     </form>
@@ -92,8 +92,8 @@
                         If you have any questions, our support team would be happy to help you.</p>
                     </div>  
                 <form action="post" class="second-form">
-                    <label for="email-addres">
-                        <input id="email-addres" class="secondary-input" type="email" placeholder="Enter your email.." required>
+                    <label for="cta-user-email">
+                        <input id="cta-user-email" class="secondary-input" type="email" placeholder="Enter your email.." required>
                     </label>
                     <a href="/" class="btn">Get Started For Free</a>
                 </form>
@@ -105,7 +105,7 @@
     <footer>
         <div class="white-logo container">
             <a href="/">
-                <img src="/assets/img/logo-white.svg" alt="">
+                <img src="/assets/img/logo-white.svg" alt="white footer logo">
             </a>
         </div>
         <div class="flex-footer container">
