--- a/index.html
+++ b/index.html
@@ -64,22 +64,23 @@
                     </div>
     
                     <a class="green" href="/">See how fylo works</a>
-    
-                    <blockquote class="flex-quote">
-                        <p>Fylo has improved our team productivity by an order of magnitude. Since 
-                            making the switch our team has become a well-oiled collaboration machine.</p>
 
+                    <div class="flex-quote">
+                        <blockquote>
+                            <p>Fylo has improved our team productivity by an order of magnitude. Since 
+                                making the switch our team has become a well-oiled collaboration machine.</p>
+                        </blockquote>
+
+                        <figcaption class="flex-caption">
+                            <img src="/assets/img/avatar-testimonial.jpg" alt="avatar testimonial">
                             <div>
-                                <figcaption class="flex-caption">
-                                    <img src="/assets/img/avatar-testimonial.jpg" alt="avatar testimonial">
-                                    <div>
-                                        <strong>Kyle Burton</strong>
-                                        <small>Founder & CEO, Huddle</small>
-                                    </div>
-                                </figcaption>
-
+                                <strong>Kyle Burton</strong>
+                                <small>Founder & CEO, Huddle</small>
                             </div>
-                    </blockquote>
+                        </figcaption>
+
+                    </div>
+
                 </div>
             </div>
         </section>
