--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     
                     <a class="green" href="/">See how fylo works</a>
 
-                    <div class="flex-quote">
+                    <figure class="flex-quote">
                         <blockquote>
                             <p>Fylo has improved our team productivity by an order of magnitude. Since 
                                 making the switch our team has become a well-oiled collaboration machine.</p>
                         </blockquote>
-
+                        
                         <figcaption class="flex-caption">
                             <img src="/assets/img/avatar-testimonial.jpg" alt="avatar testimonial">
                             <div>
@@ -78,9 +78,7 @@
                                 <small>Founder & CEO, Huddle</small>
                             </div>
                         </figcaption>
-
-                    </div>
-
+                    </figure>
                 </div>
             </div>
         </section>
